--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,10 @@ dependencies {
     // ViewModel
     implementation("androidx.lifecycle:lifecycle-runtime-compose:2.6.0-alpha04")
     // ViewModel utilities for Compose
-
+    // retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    // GSON
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     //Livedata
     implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
