--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,10 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     // GSON
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+
+    //Icons
+    implementation "androidx.compose.material:material-icons-core:$compose_ui_version"
+    implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     //Livedata
     implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
 
